objects/Solution.object
<CustomObject>
    <fields>
        <fullName>EDY_ORGCUSTOM__DB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__Old_SolutionName__c</fullName>
        <label>Old Solution Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__Old_SolutionNote__c</fullName>
        <label>Old Solution Note</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Notes__c</fullName>
        <description>Not visible to customers</description>
        <inlineHelpText>This information is not visible to the customers in Portal\</inlineHelpText>
        <label>Internal Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <label>Keywords</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ORGCUSTOM4_DB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ORGCUSTOM4_DB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Org_Cust_Case_ID__c</fullName>
        <label>Org Cust Case ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Expiration_Date__c</fullName>
        <label>Solution Expiration Date</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>AllReviewedSolutions</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SOLUTION.STATUS_CODE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Reviewed Solutions</label>
    </listViews>
    <listViews>
        <fullName>AllUnreviewedSolutions</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SOLUTION.STATUS_CODE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Unreviewed Solutions</label>
    </listViews>
</CustomObject>